--- a/journey/src/Styles/section.css
+++ b/journey/src/Styles/section.css
@@ -7,12 +7,75 @@ video{
 }
 
 .section-container{
-    background: url('image') center center/cover
-    no-repeat;
+    /* background: url('') center center/cover */
+    background-color: rgb(135, 182, 167);
+    /* no-repeat; */
     height:100vh;
     widows: 100%;display:flex;
     flex-direction: column;
+    justify-content:center;
     align-items:center;
-    box-shadow: inset 0 0 0 1000px rgb(2, 0, 0);
+    /* box-shadow: inset 0 0 0 1000px rgb(2, 0, 0); */
     object-fit: contain;
+}
+
+
+.section-container > h1{
+    color:yellow;
+    font-size:50px;
+    margin-top:-100px;
+}
+
+
+.section-container > p{
+    margin-top:10px;
+    color:red;
+    font-size:20px;
+    
+}
+
+
+.section-btn{
+    margin-top:30px;
+
+}
+
+.section-btns .btn{
+    margin:10px;
+}
+
+
+.fa-play-circle{
+    margin-left:5px;
+}
+
+@media screen and (max-width: 960px){
+    .section-container > h1{
+        
+        font-size:70px;
+        margin-top:-150px;
+    }
+}
+
+@media screen and (max-width: 768px){
+    .section-container > h1{
+        
+        font-size:50px;
+        margin-top:-100px;
+    }
+
+    .section-container > p{
+        
+        font-size:700px;
+        
+    }
+
+    .btn-mobile{
+      display:block;
+      text-decoration:none;
+    }
+    
+    .btn{
+        width:100%;
+    }
 }
