--- a/journey/src/Styles/button.css
+++ b/journey/src/Styles/button.css
@@ -1,4 +1,4 @@
-:root{
+/* :root{
     --primary:white;
 
 }
@@ -13,7 +13,7 @@
 
 .btn--primary{
     /* //css class we made in buttn component */
-    background-color:var(--primary);
+    /* background-color:var(--primary);
     color:red;
     border: 3px solid var(--primary);
 }
@@ -43,5 +43,5 @@
     color:green;
     transition:all 0.3s ease-out;
 
-}
+} */ 
 
