--- a/journey/src/index.css
+++ b/journey/src/index.css
@@ -3,8 +3,15 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  /* -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; */
+
+  /* background: url("https://www.dau.edu/powerful-examples/PublishingImages/website-banner-dau-mil.png");
+    background-size: 'cover';
+    height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover; */
 }
 
 code {
